<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="listener"
            type="com.bwidlarz.speechcalculator.MainActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="20dp">

        <com.github.zagum.speechrecognitionview.RecognitionProgressView
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/expression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="47dp" />

        <include layout="@layout/divider_layout" />

        <TextView
            android:id="@+id/evaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:text="@string/equal_sign"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="26dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_expression_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v -> listener.onNewEvaluationClicked()}"
                android:text="@string/new_button" />

            <Button
                android:id="@+id/continue_expression_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v -> listener.onContinueClicked()}"
                android:text="@string/continue_button" />

            <Button
                android:id="@+id/continues_evaluation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v -> listener.onLoopClicked()}"
                android:text="@string/loop" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v -> listener.onResetClicked()}"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>
</layout>
